# claims-management

./: .env.example  .gitignore  AI_LOG.md  LICENSE  README.md  README_old.md  SCRUM.md  VAULT_SETUP.md  docker-compose.yml  package.json  requirements.txt  setup_vault.py
.github/workflows/: ci-cd.yml  deploy-pages.yml
backend/: .flake8  README_PSYCOPG.md  pyproject.toml
backend/app/: main.py  migrate.py
backend/app/api/routes/: claims.py  damages.py
backend/app/core/: config.py  db.py
backend/app/domain/: models.py
backend/app/schemas/: models.py
backend/node-backend/: package.json
backend/node-backend/src/: app.js
backend/node-backend/src/config/: database.js
backend/node-backend/src/controllers/: claimsController.js
backend/node-backend/src/middleware/: validate.js
backend/node-backend/src/models/: index.js
backend/node-backend/src/routes/: claims.js
backend/node-backend/src/services/: pythonService.js
backend/tests/: test_claims_router.py  test_config.py  test_damages_router.py  test_db.py  test_integration.py  test_main.py  test_migrate.py  test_models.py  test_unit.py
frontend/: angular.json  package.json  tsconfig.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/models/: claim.model.ts
frontend/src/app/core/services/: claim.service.ts  damage.service.ts
frontend/src/app/features/claims/components/claim-detail/: claim-detail.component.css  claim-detail.component.html  claim-detail.component.ts
frontend/src/environments/: environment.prod.ts
(+9 files in other folders)
